# django-browser-reload

./: .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  package.json  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: issue.yml
example/: README.rst  requirements.in  requirements.txt
example/example/: asgi.py  jinja.py  settings.py  urls.py  views.py
example/example/core/: views.py
example/example/static/: main.css
example/example/templates/: index-django.html  index-jinja.html  index.html
example/example/templates/django/: index.html
example/example/templates/jinja/: index.html
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
src/django_browser_reload/: __init__.py  apps.py  checks.py  jinja.py  middleware.py  urls.py  views.py
src/django_browser_reload/static/django-browser-reload/: django-browser-reload.css  reload-listener.js  reload-worker.js  reload.js
src/django_browser_reload/templatetags/: django_browser_reload.py
tests/: compat.py  settings.py  test_checks.py  test_jinja.py  test_middleware.py  test_views.py  urls.py
tests/requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
tests/templatetags/: test_django_browser_reload.py
